crates/toride-mise/tests/snapshots/snapshots__command_spec_with_cwd.snap
---
source: crates/toride-mise/tests/snapshots.rs
assertion_line: 189
expression: spec
---
CommandSpec {
    program: "mise",
    args: [
        "env",
        "--json",
    ],
    stdin: None,
    stdin_null: false,
    timeout: None,
    env: [],
    env_remove: [],
    clear_env: false,
    cwd: Some(
        "/project/dir",
    ),
    output_mode: Capture,
    redact: false,
    output_limit: None,
    env_precedence: ExplicitWins,
    path_resolution: OsSearch,
    argv_policy: Allow,
    output_cap: OptIn,
}
