crates/toride-mise/tests/snapshots/snapshots__command_spec_with_env_and_timeout.snap
---
source: crates/toride-mise/tests/snapshots.rs
assertion_line: 199
expression: spec
---
CommandSpec {
    program: "mise",
    args: [
        "ls",
        "--output=json",
    ],
    stdin: None,
    stdin_null: false,
    timeout: Some(
        30s,
    ),
    env: [
        (
            "MISE_DATA_DIR",
            "/tmp/mise",
        ),
    ],
    env_remove: [],
    clear_env: false,
    cwd: None,
    output_mode: Capture,
    redact: true,
    output_limit: None,
    env_precedence: ExplicitWins,
    path_resolution: OsSearch,
    argv_policy: Allow,
    output_cap: OptIn,
}
